--- a/mycarrd.html
+++ b/mycarrd.html
@@ -17,3 +17,7 @@
 <h4>
     Carrd are like virtual business cards that you can use to further your business
 </h4>
+<h4>
+    Although I don't have a business so this is under construction for now
+</h4>
+<img src="jeanwhatthe.gif" alt="Magical Girl Gif" class="center">
