--- a/MyWebsiteProject.html
+++ b/MyWebsiteProject.html
@@ -188,7 +188,7 @@
     <h5>
         ╰┈➤ ・❥・ Okay that's it with the bio, check back for updates ꕥ
     </h5>
-
+<img src="kleejump.gif" alt="Magical Girl Gif" class="center">
     <h6>
         <a href="https://www.symbolcopy.com/aesthetic-symbols.html">This is where aesthetic symbols come from.</a>
     </h6>
