--- a/contactpage.html
+++ b/contactpage.html
@@ -1,7 +1,7 @@
 How To Contact Me 
 
 <head>
-    <title>My Profile</title>
+    <title>Contact Me</title>
     <link rel="stylesheet" href="stylehomepage.css">
     <link rel="icon" href="zhongliicon.jpg">
     <nav>
@@ -16,7 +16,7 @@ How To Contact Me
   </nav>
 </head>
 
-
+  <img src="diomeme.png" alt="Magical Girl Gif" class="center">
 
 <div>
   <h4>
@@ -31,13 +31,7 @@ How To Contact Me
     <input type="radio" id="Female" name="gender"><br><br>
     <label for="subject">Feeback</label>
     <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
     <input type="submit" value="Submit">
-    <label for="discover">How Did You Discover</label>
-    <select id="discover" name="discover">
-      <option value="friends">Friends</option>
-      <option value="internet">Internet</option>
-      <option value="other">other</option>
     </select>
 
   </form>
