--- a/contactpage.html
+++ b/contactpage.html
@@ -15,7 +15,9 @@ How To Contact Me
         </div>
   </nav>
 </head>
-
+<h2>
+    YOU THOUGHT IT WAS THE CONTACT PAGE BUT IT WAS I DIO
+</h2>
   <img src="diomeme.png" alt="Magical Girl Gif" class="center">
 
 <div>
