--- a/contactpage.html
+++ b/contactpage.html
@@ -24,14 +24,14 @@ How To Contact Me
   <h4>
     <label for="stars">How many stars do you rate my website?</label>
     <input type="number" id="stars" name="stars" min="2" max="6"><br><br>
-    <label for="emaild">Emaild :</label>
-    <input type="email" id="emaild" name="emaild"><br><br>
+    <label for="email">Emaild :</label>
+    <input type="email" id="email" name="email"><br><br>
     <label>Gender</label><br><br>
     <label for="Male">Male</label>
     <input type="radio" id="Male" name="gender">
     <label for="Female">Female</label>
     <input type="radio" id="Female" name="gender"><br><br>
-    <label for="subject">Feeback</label>
+    <label for="subject">Feedback</label>
     <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
     <input type="submit" value="Submit">
     </select>
