--- a/passionshomepage.html
+++ b/passionshomepage.html
@@ -7,24 +7,18 @@
         <div class="topnav">
             <a class="active" href="index.html">Home</a>
             <a href="MyWebsiteProject.html">About Me</a>
-            <a href="passionshomepage.html">Passions</a>
+            <a href="passionshomepage.html">Genshin Impact</a>
             <a href="contactpage.html">Contact</a>
             <a href="mycarrd.html">My Carrd</a>
             <a href="aesthetics.html">Aesthetics</a>
           </div>
     </nav>
 </head>
-<body>
-    <header>
-    <h1>Passions</h1>
-    </header>
-
-
 <html>
     <h2>
         Genshin Impact
     </h2>
-    <img src="genshinlogo.png" alt="Genshin Impact Logo" title="Genshin Impact Logo">
+    <img src="xiaolantern.gif" alt="Xiao's Lanterns" title="Xiao's Lanterns">
 
     <h4><a href="https://genshin.mihoyo.com/pc-launcher/?utm_source=NA_google_US_sem_keyword01_20201019&mhy_trace_channel=ga_channel&new=1&gclid=Cj0KCQjwxdSHBhCdARIsAG6zhlVmhypqgdk_hTJQF_CKYByPY7MhHplMxyWA7LalvQR792rmTAPblJQaAvDHEALw_wcB#/">Official Website</a></h4>
 
