--- a/contactpage.html
+++ b/contactpage.html
@@ -8,7 +8,7 @@ How To Contact Me
       <div class="topnav">
           <a class="active" href="index.html">Home</a>
           <a href="MyWebsiteProject.html">About Me</a>
-          <a href="passionshomepage.html">Passions</a>
+          <a href="passionshomepage.html">Genshin Impact</a>
           <a href="contactpage.html">Contact</a>
           <a href="mycarrd.html">My Carrd</a>
           <a href="aesthetics.html">Aesthetics</a>
