--- a/aesthetics.html
+++ b/aesthetics.html
@@ -5,7 +5,7 @@
         <div class="topnav">
             <a class="active" href="index.html">Home</a>
             <a href="MyWebsiteProject.html">About Me</a>
-            <a href="passionshomepage.html">Passions</a>
+            <a href="passionshomepage.html">Genshin Impact</a>
             <a href="contactpage.html">Contact</a>
             <a href="mycarrd.html">My Carrd</a>
             <a href="aesthetics.html">Aesthetics</a>
