--- a/passionshomepage.html
+++ b/passionshomepage.html
@@ -18,7 +18,7 @@
     <h2>
         Genshin Impact
     </h2>
-    <img src="xiaolantern.gif" alt="Xiao's Lanterns" title="Xiao's Lanterns">
+    <img src="xiaolantern.gif" alt="Xiao's Lanterns" title="Xiao's Lanterns" class="center">
 
     <h4><a href="https://genshin.mihoyo.com/pc-launcher/?utm_source=NA_google_US_sem_keyword01_20201019&mhy_trace_channel=ga_channel&new=1&gclid=Cj0KCQjwxdSHBhCdARIsAG6zhlVmhypqgdk_hTJQF_CKYByPY7MhHplMxyWA7LalvQR792rmTAPblJQaAvDHEALw_wcB#/">Official Website</a></h4>
 
