--- a/passionshomepage.html
+++ b/passionshomepage.html
@@ -25,7 +25,7 @@
     <h4>My Genshin UID - 629889714</h4>
 
     <h4>Genshin Impact is a fantasy relam where gods known as Archon's reign over Teyvat. These 7 Archon's bestow Visons which are like elemental powers upon those who have a certain ambition. These Archon's reign over Pyro, Cryo, Hydro, Anemo, Electro, Geo and Dendro. In the game there is a gatch system where you can try your luck to get characters who can use the elements to join your team.</h4>
-
+<img src="kleewillendtheworld(2).gif" alt="Genshin Start" class="Genshin Start">
     <h4>Elements/Visons And Their Known Archons</h4>
 
     <table style="width:100%">
