--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Navigation</title>
-    <link rel="icon" href="zhongliicon.jpg">
+    <link rel="icon" href="HuTaoGames.jpg">
     <link rel="stylesheet" href="stylehomepage.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
         <div class="topnav">
             <a class="active" href="index.html">Home</a>
             <a href="MyWebsiteProject.html">About Me</a>
-            <a href="passionshomepage.html">Passions</a>
+            <a href="passionshomepage.html">Genshin Impact</a>
             <a href="contactpage.html">Contact</a>
             <a href="mycarrd.html">My Carrd</a>
             <a href="aesthetics.html">Aesthetics</a>
