--- a/aesthetics.html
+++ b/aesthetics.html
@@ -1,5 +1,6 @@
 <header>
     <h1>About Aesthetics</h1>
+    <link rel="icon" href="HuTaoGames.jpg">
     </header>
     <nav>
         <div class="topnav">
