--- a/contactpage.html
+++ b/contactpage.html
@@ -3,7 +3,7 @@ How To Contact Me
 <head>
     <title>Contact Me</title>
     <link rel="stylesheet" href="stylehomepage.css">
-    <link rel="icon" href="zhongliicon.jpg">
+    <link rel="icon" href="HuTaoGames.jpg">
     <nav>
       <div class="topnav">
           <a class="active" href="index.html">Home</a>
