--- a/mycarrd.html
+++ b/mycarrd.html
@@ -2,7 +2,7 @@
 <head>
     <title>My Carrd (Under Construction)</title>
     <link rel="stylesheet" href="stylehomepage.css">
-    <link rel="icon" href="zhongliicon.jpg">
+    <link rel="icon" href="HuTaoGames.jpg">
 </head>
 <nav>
     <div class="topnav">
