--- a/passionshomepage.html
+++ b/passionshomepage.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>>
 <html lang="en">
 <head>
-    <link rel="icon" href="zhongliicon.jpg">
+    <link rel="icon" href="HuTaoGames.jpg">
     <link rel="stylesheet" href="stylehomepage.css">
+</head>
     <nav>
         <div class="topnav">
             <a class="active" href="index.html">Home</a>
