--- a/MyWebsiteProject.html
+++ b/MyWebsiteProject.html
@@ -6,8 +6,8 @@
 </head>
 <nav>
     <div class="topnav">
-        <a class="active" href="index.html">Home</a>
-        <a href="MyWebsiteProject.html">About Me</a>
+        <a href="index.html">Home</a>
+        <a class="active" href="MyWebsiteProject.html">About Me</a>
         <a href="passionshomepage.html">Genshin Impact</a>
         <a href="contactpage.html">Contact</a>
         <a href="mycarrd.html">My Carrd</a>
