--- a/aesthetics.html
+++ b/aesthetics.html
@@ -4,12 +4,12 @@
     </header>
     <nav>
         <div class="topnav">
-            <a class="active" href="index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="MyWebsiteProject.html">About Me</a>
             <a href="passionshomepage.html">Genshin Impact</a>
             <a href="contactpage.html">Contact</a>
             <a href="mycarrd.html">My Carrd</a>
-            <a href="aesthetics.html">Aesthetics</a>
+            <a class="active" href="aesthetics.html">Aesthetics</a>
           </div>
     </nav>
     <link rel="stylesheet" href="stylehomepage.css">
