--- a/contactpage.html
+++ b/contactpage.html
@@ -6,10 +6,10 @@ How To Contact Me
     <link rel="icon" href="HuTaoGames.jpg">
     <nav>
       <div class="topnav">
-          <a class="active" href="index.html">Home</a>
+          <a href="index.html">Home</a>
           <a href="MyWebsiteProject.html">About Me</a>
           <a href="passionshomepage.html">Genshin Impact</a>
-          <a href="contactpage.html">Contact</a>
+          <a class="active" href="contactpage.html">Contact</a>
           <a href="mycarrd.html">My Carrd</a>
           <a href="aesthetics.html">Aesthetics</a>
         </div>
