--- a/mycarrd.html
+++ b/mycarrd.html
@@ -6,11 +6,11 @@
 </head>
 <nav>
     <div class="topnav">
-        <a class="active" href="index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="MyWebsiteProject.html">About Me</a>
         <a href="passionshomepage.html">Genshin Impact</a>
         <a href="contactpage.html">Contact</a>
-        <a href="mycarrd.html">My Carrd</a>
+        <a class="active" href="mycarrd.html">My Carrd</a>
         <a href="aesthetics.html">Aesthetics</a>
       </div>
 </nav>
