--- a/mycarrd.html
+++ b/mycarrd.html
@@ -20,4 +20,8 @@
 <h4>
     Although I don't have a business so this is under construction for now
 </h4>
-<img src="jeanwhatthe.gif" alt="Magical Girl Gif" class="center">
+<img src="jeanwhatthe.gif" alt="Grand Master Jean Dancing" class="center">
+
+<h4>
+    sMoOtH lIke bUtTeR, lIke cRimInAl uNDeRcoVer
+</h4>
