--- a/contactpage.html
+++ b/contactpage.html
@@ -24,7 +24,7 @@ How To Contact Me
   <h4>
     <label for="stars">How many stars do you rate my website?</label>
     <input type="number" id="stars" name="stars" min="2" max="6"><br><br>
-    <label for="email">Emaild :</label>
+    <label for="email">Email :</label>
     <input type="email" id="email" name="email"><br><br>
     <label>Gender</label><br><br>
     <label for="Male">Male</label>
