--- a/contactpage.html
+++ b/contactpage.html
@@ -22,18 +22,18 @@ How To Contact Me
 
 <div>
   <h4>
-    <label for="stars">How many stars do you rate my website?</label>
+    <label for="stars">How many stars do you rate my website ;</label>
     <input type="number" id="stars" name="stars" min="2" max="6"><br><br>
-    <label for="email">Email :</label>
+    <label for="email">Email ;</label>
     <input type="email" id="email" name="email"><br><br>
-    <label>Gender</label><br><br>
+    <label>Gender ;</label><br><br>
     <label for="Male">Male</label>
     <input type="radio" id="Male" name="gender">
     <label for="Female">Female</label>
     <input type="radio" id="Female" name="gender"><br><br>
-    <label for="subject">Feedback</label>
+    <label for="subject">Feedback ;</label>
     <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-    <label for="submit">Submit</label>
+    <label for="submit">Submit ;</label>
     <input type="submit" value="Submit">
     </select>
 
