--- a/passionshomepage.html
+++ b/passionshomepage.html
@@ -25,9 +25,9 @@
 
 
     <h4>Genshin Impact is a fantasy relam where gods known as Archon's reign over Teyvat. These 7 Archon's bestow Visons which are like elemental powers upon those who have a certain ambition. These Archon's reign over Pyro, Cryo, Hydro, Anemo, Electro, Geo and Dendro. In the game there is a gatch system where you can try your luck to get characters who can use the elements to join your team.</h4>
-<img src="kleewillendtheworld(2).gif" alt="Genshin Start" class="Genshin Start">
+<hr>
     <h4>Elements/Visons And Their Known Archons</h4>
-
+<h4>
     <table style="width:100%">
         <tr>
           <th>Archon</th>
@@ -50,5 +50,13 @@
             <td>Electricity</td>
         </tr>
       </table>
+<h4>
+    <h4> Images From The Game ;<h4>
+        <img src="1.jpg" alt="Genshin" class="center">
+        <img src="2.jpg" alt="Genshin" class="center">
+        <img src="3.png" alt="Genshin" class="center">
+        <img src="4.jpg" alt="Genshin" class="center">
+        <img src="5.png" alt="Genshin" class="center">
+        <img src="6.jpg" alt="Genshin" class="center">
       
 </html>
