--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>>
 <html lang="en">
+<script>
+    alert("Warning This User Is OBSSESSED With Genshin Impact And Anime");
+</script>
 <head>
     <title>Navigation</title>
     <link rel="icon" href="HuTaoGames.jpg">
