--- a/MyWebsiteProject.html
+++ b/MyWebsiteProject.html
@@ -1,4 +1,7 @@
 <!Doctype HTML>
+<script>
+    alert("Hey you! Yeah you, you should play the game Genshin Imapct. Make sure it is okay with your supervising adult as the game is rated 14+, Thank You <33");
+</script>
 <head>
     <title>My Profile</title>
     <link rel="stylesheet" href="stylehomepage.css">
