--- a/passionshomepage.html
+++ b/passionshomepage.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>>
 <html lang="en">
+<script>
+    alert("On this page I have listed animes. Some of these are rated 14+, etc so please make sure you check with a supervising adult before watching them!");
+</script>
 <head>
     <link rel="icon" href="HuTaoGames.jpg">
     <link rel="stylesheet" href="stylehomepage.css">
