--- a/MyWebsiteProject.html
+++ b/MyWebsiteProject.html
@@ -1,6 +1,9 @@
 <!Doctype HTML>
 <script>
     alert("Hey you! Yeah you, you should play the game Genshin Imapct. Make sure it is okay with your supervising adult as the game is rated 14+, Thank You <33");
+    <button  onclick="redirect()">
+         Redirect To Aesthetics Page
+    </button>
 </script>
 <head>
     <title>My Profile</title>
@@ -169,6 +172,16 @@
     <h5>
         ╰┈➤ Aesthetic = An Ever Changing One ^^
     </h5>
+  
+    <button  onclick="redirect()">
+         Redirect To Aesthetics Page For More Info
+    </button>
+    <script>
+        function redirect(){
+            window.location="passionshomepage.html";
+        }
+    </script>
+      
 
     <h5>
         ╰┈➤ Favorite Games = Attack on Titan, Stardew Valley, Genshin Impact, Animal Crossing, My Hero, Doki Doki Literature Club, Ace Attorney.
