--- a/MyWebsiteProject.html
+++ b/MyWebsiteProject.html
@@ -178,7 +178,7 @@
     </button>
     <script>
         function redirect(){
-            window.location="passionshomepage.html";
+            window.location="aesthetics.html";
         }
     </script>
       
