--- a/MyWebsiteProject.html
+++ b/MyWebsiteProject.html
@@ -178,6 +178,7 @@
     </button>
     <script>
         function redirect(){
+            alert("Redirecting...");
             window.location="aesthetics.html";
         }
     </script>
