--- a/passionshomepage.html
+++ b/passionshomepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>>
 <html lang="en">
 <script>
-    alert("On this page I have listed animes. Some of these are rated 14+, etc so please make sure you check with a supervising adult before watching them!");
+    alert("Genshin Impact is Rated 14+ so talk with a parent before installing it...");
 </script>
 <head>
     <link rel="icon" href="HuTaoGames.jpg">
