--- a/MyWebsiteProject.html
+++ b/MyWebsiteProject.html
@@ -1,9 +1,6 @@
 <!Doctype HTML>
 <script>
-    alert("Hey you! Yeah you, you should play the game Genshin Imapct. Make sure it is okay with your supervising adult as the game is rated 14+, Thank You <33");
-    <button  onclick="redirect()">
-         Redirect To Aesthetics Page
-    </button>
+    alert("Hey you! Yeah you, you should play the game Genshin Imapct. Make sure it is okay with your supervising adult as the game is rated 14+, Thank You <33. Also most anime's I have listed are aged 14+, M and R so please watch with your parents consent");
 </script>
 <head>
     <title>My Profile</title>
@@ -36,6 +33,16 @@
     <h5>
         ╰┈➤ Hobbies = Watching Anime, Drawing Anime Characters, and Playing Video Games Like Genshin Impact
     </h5>
+    
+    <button  onclick="redirect()">
+         Redirect To Genshin Impact Page For More Info
+    </button>
+    <script>
+        function redirect(){
+            alert("Redirecting...");
+            window.location="passionshomepage.html";
+        }
+    </script>
 
     <h5>
         ╰┈➤ Favorite Actor/Actress = The Rock, Tom Hiddleson, Kira Buckland, Godzilla
