--- a/index.html
+++ b/index.html
@@ -26,5 +26,5 @@
     <h5>
         ╰┈➤ This webpage is about me! To learn more about the things I enjoy or the things that are important to me click the About Me, My Carrd or the My Passions button.
     </h5>
-    <img src="magicalgirl.gif" alt="Magical Girl Gif" class="center">
+    <img src="poorcat.gif" alt="Magical Girl Gif" class="center">
 </body>
