--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
 
     <h5>
-        ╰┈➤ This webpage is about me! To learn more about the things I enjoy or the things that are important to me click the About Me, My Carrd or the My Passions button.
+        ╰┈➤ This webpage is about me! To learn more about the things I enjoy or the things that are important to me click the About Me button.
     </h5>
-    <img src="poorcat.gif" alt="Magical Girl Gif" class="center">
+    <img src="poorcat.gif" alt="Klee Hurt Le Cat" class="center">
 </body>
