--- a/aesthetics.html
+++ b/aesthetics.html
@@ -3,6 +3,9 @@
          <link rel="stylesheet" href="stylehomepage.css">
          <link rel="icon" href="HuTaoGames.jpg">
         <style>
+            img{
+                transition:1s
+            }
             img:hover{
                 transform:rotate(30deg)
             }
