--- a/aesthetics.html
+++ b/aesthetics.html
@@ -4,10 +4,10 @@
          <link rel="icon" href="HuTaoGames.jpg">
         <style>
             img{
-                transition:1s
+                transition:1s;
             }
             img:hover{
-                transform:rotate(30deg)
+                transform:rotate(30deg);
             }
         </style>
     </head>
