--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="contactpage.html">Contact</a>
             <a href="mycarrd.html">My Carrd</a>
             <a href="aesthetics.html">Aesthetics</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()"><"bars.png"/a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()"><img scr="bars.png"/></a>
           </div>
     </nav>
 
