--- a/index.html
+++ b/index.html
@@ -2,13 +2,7 @@
 <html lang="en">
 <script>
     alert("Warning This User Is OBSSESSED With Genshin Impact And Anime");
-    function myFunction(){
-        var x=document.getElementById("navtop")
-        if(x.className=="topnav"
-           }
-        else{
-            x.className="topnav"
-        }
+    
 </script>
 <head>
     <title>Navigation</title>
@@ -20,7 +14,7 @@
     <h1>Homepage</h1>
     </header>
     <nav>
-        <div class="topnav" id="navtop">
+        <div class="topnav" id="navtop" >
             <a class="active" href="index.html">Home</a>
             <a href="MyWebsiteProject.html">About Me</a>
             <a href="passionshomepage.html">Genshin Impact</a>
@@ -35,4 +29,15 @@
         ╰┈➤ This webpage is about me! To learn more about the things I enjoy or the things that are important to me click the About Me button.
     </h5>
     <img src="poorcat.gif" alt="Klee Hurt Le Cat" class="center">
+    <script>
+        <script>
+function myFunction() {
+  var x = document.getElementById("navtop");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+ </script>
 </body>
