--- a/aesthetics.html
+++ b/aesthetics.html
@@ -24,6 +24,7 @@
             <a href="contactpage.html">Contact</a>
             <a href="mycarrd.html">My Carrd</a>
             <a class="active" href="aesthetics.html">Aesthetics</a>
+            <a href="myfavs.html"> My Favorite Medias</a>
           </div>
     </nav>
     <link rel="stylesheet" href="stylehomepage.css">
