--- a/contactpage.html
+++ b/contactpage.html
@@ -12,6 +12,7 @@ How To Contact Me
           <a class="active" href="contactpage.html">Contact</a>
           <a href="mycarrd.html">My Carrd</a>
           <a href="aesthetics.html">Aesthetics</a>
+          <a href="myfavs.html"> My Favorite Medias</a>
         </div>
   </nav>
 </head>
