--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="contactpage.html">Contact</a>
             <a href="mycarrd.html">My Carrd</a>
             <a href="aesthetics.html">Aesthetics</a>
+            <a href="myfavs.html"> My Favorite Medias</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()"><img scr="bars.png"/></a>
           </div>
     </nav>
