--- a/mycarrd.html
+++ b/mycarrd.html
@@ -12,6 +12,7 @@
         <a href="contactpage.html">Contact</a>
         <a class="active" href="mycarrd.html">My Carrd</a>
         <a href="aesthetics.html">Aesthetics</a>
+        <a href="myfavs.html"> My Favorite Medias</a>
       </div>
 </nav>
 <h4>
