--- a/passionshomepage.html
+++ b/passionshomepage.html
@@ -15,6 +15,7 @@
             <a href="contactpage.html">Contact</a>
             <a href="mycarrd.html">My Carrd</a>
             <a href="aesthetics.html">Aesthetics</a>
+            <a href="myfavs.html"> My Favorite Medias</a>
           </div>
     </nav>
 </head>
