--- a/myfavs.html
+++ b/myfavs.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-
+<head>
+  <link rel="stylesheet" href="stylehomepage.css">
+</head>
   <nav>
         <div class="topnav" id="navtop" >
             <a class="active" href="index.html">Home</a>
