--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
     </h5>
     <img src="poorcat.gif" alt="Klee Hurt Le Cat" class="center">
     <script>
+     <h5>
+         NO CATS WERE HARMED IN THE MAKING OF THIS WEBSITE
+     </h5>
         <script>
 function myFunction() {
   var x = document.getElementById("navtop");
