--- a/passionshomepage.html
+++ b/passionshomepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>>
 <html lang="en">
 <script>
-    alert("Genshin Impact is Rated 14+ so talk with a parent before installing it...");
+  
 </script>
 <head>
     <link rel="icon" href="HuTaoGames.jpg">
@@ -69,7 +69,7 @@ function slideshow() {
   if (myIndex >= x.length) {myIndex = 0}    
   x[myIndex].style.display = "block";  
   myIndex++;
-  setTimeout(slideshow, 1000); // Change image every 2 seconds
+  setTimeout(slideshow, 5000); //
 }
   </script>
     
