--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>>
 <html lang="en">
 <script>
-    alert("Warning This User Is OBSSESSED With Genshin Impact And Anime");
-    
 </script>
 <head>
     <title>Navigation</title>
@@ -26,15 +24,15 @@
         var day=new Date();
         today.innerHTML= day.toLocaleString();
         if(day.getHours()<12){
-            message.innerHTML="Good Morning 💕";
+            message.innerHTML="Good Morning";
         }
         else if(day.getHours()<15){
-            message.innerHTML="Good Afternoon 💕";
+            message.innerHTML="Good Afternoon";
         }
         else if(day.getHours()<18){
             message.innerHTML="Sleep Now";
         }
-        else{message.innerHTML="Good Evening 💕";}
+        else{message.innerHTML="Good Evening";}
     }
     setInterval(getdate, 1000);
 </script>
